Fix width overflow and disable mobile zoom

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,7 +88,7 @@
     -webkit-text-size-adjust: 100%;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground max-w-[100vw] overflow-x-hidden;
   }
 }
 
